--- a/css/style.css
+++ b/css/style.css
@@ -665,12 +665,86 @@ input[type="search"]:focus {
   color: #000000;
 }
 
+.footer-wrapper {
+  display: flex;
+  align-items: center; 
+}
+
 .footer-top {
   background-color: #32425C;
 }
 
+.logo-footer {
+  position: relative;
+  background-color: #EE3643;
+  width: 220px;
+  padding-top: 16.5px;
+  padding-right: auto;
+  padding-bottom: 16.5px;
+  padding-left: auto;
+  
+  text-align: center;
+  font-family: "Cuprum", Arial, sans-serif;
+  font-size: 30px;
+  color: #FFFFFF;
+  text-transform: uppercase;
+  line-height: 30px;
+}
+
+.logo-footer::after {
+  content: "";
+  
+  position: absolute;
+  width: 100%;
+  height: 5px;
+  left: 0;
+  bottom: -5px;
+  background-color: #B52932;
+}
+
+.logo-footer:hover {
+  background-color: #CA2C37;
+}
+
+.logo-footer::after:hover {
+  background-color: #992129;
+}
+
+.footer-contact-left {
+  display: flex;
+  flex-direction: column;
+  
+}
+
+.address-footer {
+  width: 324px;
+  margin: 0;
+  margin-left: 2px;
+  margin-top: 30px;
+  margin-bottom: 51px;
+}
+
+.footer-contact-right {
+  width: 614px;
+}
+
 .footer-site-navigation {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: flex-end;
   list-style: none;
+}
+
+.footer-contact-top .footer-site-navigation {
+  margin: 0;
+  padding-left: 67px;
+  margin-bottom: 34px;
+}
+
+.footer-contact-bottom .footer-site-navigation {
+  margin: 0;
+  padding-left: 95px;
 }
 
 .footer-site-navigation a,
@@ -692,16 +766,6 @@ input[type="search"]:focus {
   color: #FFD180;
 }
 
-.footer-bottom {
-  background-color: #293449;
-}
-
-.footer-contacts {
-  font-size: 16px;
-  line-height: 18px;
-  color: #FFFFFF;
-}
-
 .yellow-text {
   font-size: 16px;
   line-height: 18px;
@@ -716,8 +780,59 @@ input[type="search"]:focus {
   color: #EE3643;
 }
 
+.footer-bottom {
+  background-color: #293449;
+  padding: 36px 0px 34px 0px;
+}
+
+.footer-contacts {
+  font-size: 16px;
+  line-height: 18px;
+  color: #FFFFFF;
+}
+
+.copyright {
+  margin: 0;
+  width: 235px;
+}
+
 .footer-social ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 133px;
+  margin: 0;
+  margin-right: 117px;
+  padding: 0;
   list-style: none;
+  margin-left: 155px;
+}
+
+.social-btn {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  width: 43px;
+  height: 43px;
+  background-color: #212A3A;
+  border-radius: 50%;
+}
+
+.social-btn:hover,
+.social-btn:focus {
+  background-color: #EE3643;
+}
+
+.mailto {
+  width: 140px;
+  margin: 0;
+  margin-right: 49px;
+}
+
+.feedback { 
+  width: 98px;
+  margin: 0;
 }
 
 .modal-login {
@@ -761,10 +876,6 @@ input[type="search"]:focus {
   line-height: 21px;
   color: #000000;
 }
-
-/*.login-account:hover {
-
-}*/
 
 .login-account:active {
   color: rgba(0, 0, 0, 0.3);
@@ -881,9 +992,6 @@ input[type="search"]:focus {
 
 /* flex */
 
-
-
-
 .products-list {
   display: flex;
   justify-content: space-around;
@@ -898,85 +1006,4 @@ input[type="search"]:focus {
 .company-contacts {
   display: flex;
   justify-content: space-between;
-}
-
-.footer-wrapper {
-  width: 940px;
-  margin: 0 auto;
-  padding: 0 10px;
-  display: flex;
-  align-items: center; 
-}
-
-.footer-contact-left {
-  display: flex;
-  flex-direction: column;
-
-}
-
-.address-footer {
-  width: 324px;
-  margin: 0;
-  margin-left: 2px;
-  margin-top: 30px;
-  margin-bottom: 51px;
-
-}
-
-.footer-site-navigation {
-  display: flex;
-}
-
-.footer-bottom {
-  padding: 35px 0;
-}
-
-.copyright {
-  margin: 0;
-  margin-right: 160px;
-  width: 230px;
-}
-
-.footer-social ul {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  width: 133px;
-  margin: 0 auto;
-  margin-right: 117px;
-  padding: 0;
-  list-style: none;
-}
-
-/*.footer-social ul {
-  display: block;
-  margin-bottom: 15px;
-}*/
-
-.social-btn {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  width: 43px;
-  height: 43px;
-  background-color: #212A3A;
-  border-radius: 50%;
-}
-
-.social-btn:hover,
-.social-btn:focus {
-  background-color: #EE3643;
-}
-
-.mailto {
-  width: 140px;
-  margin: 0;
-  margin-right: 49px;
-}
-
-.feedback { 
-  width: 101px;
-  margin: 0;
-  margin-left: auto;
 }
