--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+
   font-family: "Cuprum", Arial, sans-serif;
   font-size: 14px;
   line-height: 24px;
@@ -25,9 +26,10 @@ input[type="radio"].visually-hidden {
   width: 1px;
   height: 1px;
   margin: -1px;
+  padding: 0;
 
   border: 0;
-  padding: 0;
+
   white-space: nowrap;
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
@@ -39,9 +41,9 @@ input[type="radio"].visually-hidden {
   line-height: 18px;
   color: #FFFFFF;
   text-transform: uppercase;
-  
-  border-radius: 3px;
+
   background-color: #EE3643;
+  border-radius: 3px;
 }
 
 .btn:hover {
@@ -82,7 +84,10 @@ input[type="radio"].visually-hidden {
   position: relative;
 
   width: 220px;
-  padding: 10px 0px 8px 0px;
+  padding-top: 10px;
+  padding-right: 0px;
+  padding-bottom: 8px;
+  padding-left: 0px;
   
   font-family: "Cuprum", Arial, sans-serif;
   font-size: 24px;
@@ -98,9 +103,9 @@ input[type="radio"].visually-hidden {
   content: "";
   
   position: absolute;
-  left: 0;
   bottom: -5px;
-
+  left: 0;
+ 
   width: 100%;
   height: 5px;
   
@@ -117,26 +122,29 @@ input[type="radio"].visually-hidden {
 
 .form-search input[type="search"] {
   width: 270px;
-  padding: 12px 0px 12px 50px;
+  padding-top: 12px;
+  padding-right: 0px;
+  padding-bottom: 12px;
+  padding-left: 50px;
 
   font-size: 17px;
   line-height: 18px;
   color: #FFFFFF;
   
+  background-color: #293449;
   background-image: url("../img/icon-search-1.png"); 
   background-repeat: no-repeat;
   background-position: 17px 12px;
-  background-color: #293449;
   border: none;
 
   cursor: pointer;
 }
 
 .form-search input[type="search"]:hover {
+  background-color: #212A3A;
   background-image: url("../img/icon-search-2.png"); 
   background-repeat: no-repeat;
   background-position: 13px 10px;
-  background-color: #212A3A;
 }
 
 .form-search input[type="search"]:active {
@@ -146,11 +154,12 @@ input[type="radio"].visually-hidden {
 }
 
 .form-search input[type="search"]:focus {
+  color: #000000;
+
+  background-color: #FFFFFF;
   background-image: url("../img/icon-search-4.png"); 
   background-repeat: no-repeat;
   background-position: 17px 12px;
-  background-color: #FFFFFF;
-  color: #000000;
 }
 
 .form-search input::-webkit-input-placeholder {
@@ -159,6 +168,7 @@ input[type="radio"].visually-hidden {
   line-height: 18px;
   color:#FFFFFF; 
 }
+
 .form-search input::-moz-placeholder {
   font-family: "Cuprum", Arial, sans-serif;
   font-size: 17px;
@@ -190,11 +200,11 @@ input[type="radio"].visually-hidden {
 .bookmarks {
   position: relative;
 
+  width: 105px;
   padding-top: 12px;
   padding-right: 0px;
   padding-bottom: 12px;
   padding-left: 45px;
-  width: 105px;
 }
 
 .bookmarks::before {
@@ -260,8 +270,9 @@ input[type="radio"].visually-hidden {
 
 .bookmarks:active,
 .cart:active {
-  background-color: #161D29;
   color: rgba(255, 255, 255, 0.6);
+
+  background-color: #161D29;
 }
 
 .bookmarks:focus::before, 
@@ -271,8 +282,9 @@ input[type="radio"].visually-hidden {
 
 .bookmarks:focus,
 .cart:focus {
-  background-color: #293449;
   color: #FFFFFF;
+
+  background-color: #293449;
 }
 
 .order {
@@ -291,6 +303,7 @@ input[type="radio"].visually-hidden {
 
 .order:active {
   color: rgba(255, 255, 255, 0.5);
+
   background-color: #518534;
 }
 
@@ -301,23 +314,22 @@ input[type="radio"].visually-hidden {
 .header-center {
   display: flex;
   justify-content: space-between;
-  padding-left: 52px;
   margin: 0;
   padding: 0;
   padding-top: 47px;
 }
 
 .title-description {
+  width: 198px;
   margin: 0;
   padding: 0;
-  width: 198px;
-  padding-top: 3px; 
+  padding-top: 3px;
   padding-left: 52px;
 
   font-size: 16px;
   line-height: 23px;
   color: #EE3643;
-  font-style: italic; 
+  font-style: italic;
   font-weight: normal;
 }
 
@@ -329,12 +341,12 @@ input[type="radio"].visually-hidden {
   position: relative;
 
   width: 146px;
-  padding-left: 71px;
-  padding-right: 47px;
-  padding-top: 9px;
-  padding-bottom: 9px;
   margin: 0;
   margin-bottom: 3px;
+  padding-top: 9px;
+  padding-left: 71px;
+  padding-bottom: 9px;
+  padding-right: 47px;
 
   font-size: 21px;
   line-height: 21px;
@@ -360,10 +372,10 @@ input[type="radio"].visually-hidden {
 }
 
 .header-contacts .address {
-  margin: 0;
-  padding-left: 9px;
-  padding-right: 9px;
   width: 252px;
+  margin: 0;
+  padding-right: 9px;
+  padding-left: 9px;
 
   font-size: 14px;
   line-height: 24px;
@@ -392,10 +404,10 @@ input[type="radio"].visually-hidden {
 
   width: 50px;
   margin-right: 10px;
-  padding-left: 47px;
-  padding-right: 26px;
   padding-top: 10px;
+  padding-right: 26px;
   padding-bottom: 11px;
+  padding-left: 47px;
 
   background-color: #FFFFFF;
 }
@@ -418,10 +430,10 @@ input[type="radio"].visually-hidden {
 
 .user-info .registration {
   width: 102px;
-  padding-left: 25px;
-  padding-right: 23px;
   padding-top: 10px;
+  padding-right: 23px;
   padding-bottom: 11px;
+  padding-left: 25px;
 
   background-color: #FFFFFF;
 }
@@ -455,9 +467,12 @@ input[type="radio"].visually-hidden {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  margin: 0;
-  padding: 0 23px;
   align-items: center;
+  margin: 0;
+  padding-top: 0px;
+  padding-right: 23px;
+  padding-bottom: 0px;
+  padding-left: 23px;
 
   list-style: none;
 }
@@ -504,8 +519,8 @@ input[type="radio"].visually-hidden {
 .promo-left {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
   flex-direction: column;
+  justify-content: space-between;
   margin-left: 20px;
 }
 
@@ -530,18 +545,18 @@ input[type="radio"].visually-hidden {
   justify-content: center;
   align-items: center;
   width: 135px;
-  padding-top: 10px;
-  padding-bottom: 10px;
   margin-bottom: 22px;
   margin-left: 25px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 
   font-size: 14px;
   line-height: 18px;
   color: #FFFFFF;
   text-transform: uppercase;
 
-  border-radius: 3px;
   background-color: rgba(0, 0, 0, 0.1);
+  border-radius: 3px;
 }
 
 .promo-btn:hover {
@@ -588,8 +603,6 @@ input[type="radio"].visually-hidden {
 
 .promo-slider {
   position: relative;
-
-  /*display: flex;*/
 }
 
 .promo-slide-first {
@@ -600,6 +613,46 @@ input[type="radio"].visually-hidden {
   background-image: url("../img/drill-1.jpg");
   background-repeat: no-repeat;
   background-position: 0 0;
+}
+
+.slider-left-btn {
+  position: absolute;
+  top: 50%;
+  left: 25px;
+  z-index: 1;
+
+  width: 22px;
+  height: 40px;
+
+  margin-top: -20px;
+
+  background-image: url("../img/icon-left.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+
+  cursor: pointer;
+}
+
+.slider-right-btn {
+  position: absolute;
+  top: 50%;
+  right: 25px;
+  z-index: 1;
+  
+  width: 22px;
+  height: 40px;
+  margin-top: -20px;
+  
+  background-image: url("../img/icon-right.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+
+  cursor: pointer;
+}
+
+.slider-left-btn:hover,
+.slider-right-btn:hover {
+  filter: contrast(50%);
 }
 
 .promo-slide-second {
@@ -640,11 +693,11 @@ input[type="radio"].visually-hidden {
   align-items: center;
   
   width: 195px;
-  padding-top: 10px;
-  padding-bottom: 10px;
   margin: 0;
   margin-top: 114px;
   margin-left: 25px;
+  padding-top: 10px;
+  padding-bottom: 10px; 
 }
 
 .promo-slider input[type=radio] {
@@ -688,10 +741,10 @@ input[type="radio"].visually-hidden {
 
 .popular {
   display: flex;
-  margin: 0;
-  padding: 0;
   justify-content: space-between;
   align-items: center;
+  margin: 0;
+  padding: 0;
   padding-top: 6px;
   padding-bottom: 2px;
 
@@ -713,19 +766,19 @@ input[type="radio"].visually-hidden {
   justify-content: center;
   align-items: center;
   width: 253px;
-  padding-top: 10px;
-  padding-bottom: 10px;
   margin-right: 24px;
   margin-bottom: 4px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .products-list {
   display: flex;
   justify-content: space-between;
-  padding: 0;
   margin: 0;
   margin-top: 21px;
   margin-bottom: 21px;
+  padding: 0;
 }
 
 .product {
@@ -745,7 +798,10 @@ input[type="radio"].visually-hidden {
 }
 
 .product-title {
-  margin: auto 25px;
+  margin-top: auto;
+  margin-right: 25px;
+  margin-bottom: auto;
+  margin-left: 25px;
 
   font-family: "PT Sans", Arial, sans-serif;
   font-size: 18px;
@@ -775,9 +831,13 @@ input[type="radio"].visually-hidden {
   align-items: center;
   width: 81px;
   margin-top: 8px;
-  margin-left: 41px;
   margin-bottom: 20px;
-  padding: 10px 30px;
+  margin-left: 41px;
+
+  padding-top: 10px;
+  padding-right: 30px;
+  padding-bottom: 10px;
+  padding-left: 30px;
 
   font-family: "PT Sans", Arial, sans-serif;
   font-size: 17px;
@@ -832,7 +892,10 @@ input[type="radio"].visually-hidden {
   
   width: 218px;
   height: 88px;
-  padding: 40px 0;
+  padding-top: 40px;
+  padding-right: 0px;
+  padding-bottom: 40px;
+  padding-left: 0px;
   
   background-color: #FFFFFF;
 }
@@ -843,7 +906,11 @@ input[type="radio"].visually-hidden {
   width: 129px;
   margin: 0 auto;
   margin-bottom: 7px;
-  padding: 7px 0;
+
+  padding-top: 7px;
+  padding-right: 0px;
+  padding-bottom: 7px;
+  padding-left: 0px;
   
   font-family: "Cuprum", Arial, sans-serif;
   font-size: 14px;
@@ -972,15 +1039,13 @@ input[type="radio"].visually-hidden {
   color: #000000;
 }
 
-/*.service-slider {
-  position: relative;
-
-  margin-top: 71px;
-}*/
-
 .service-slider {
   position: relative;
-  margin: 70px 0 54px 0;
+
+  margin-top: 70px;
+  margin-right: 0px;
+  margin-bottom: 54px;
+  margin-left: 0px;
   padding-bottom: 98px;
 }
 
@@ -1006,11 +1071,11 @@ input[type="radio"].visually-hidden {
 .service-slider-menu label {
   display: block;
   width: 218px;
-  padding-left: 22px;
+  margin: 0;
   padding-top: 13.5px;
   padding-bottom: 17.5px;
-  margin: 0;
-
+  padding-left: 22px;
+ 
   font-size: 21px;
   line-height: 30px;
   color: #FFFFFF;
@@ -1050,12 +1115,6 @@ input[type="radio"].visually-hidden {
   color: #000000;
 }
 
-/*.service-sliders-content {
-  position: relative;
-
-  padding-bottom: 139px;
-}*/
-
 .sliders-content-delivery {
   position: absolute;
   top: -6px;
@@ -1063,8 +1122,6 @@ input[type="radio"].visually-hidden {
   
   display: none;
   width: 620px;
-  /*margin-left: 80px;*/
-  /*padding-bottom: 139px;*/
 
   background-image: url("../img/slider-delivery.png");
   background-repeat: no-repeat;
@@ -1086,8 +1143,6 @@ input[type="radio"].visually-hidden {
   
   display: none;
   width: 620px;
-  /*margin-left: 80px;*/
-  /*padding-bottom: 139px;*/
 
   background-image: url("../img/slider-guarantee.png");
   background-repeat: no-repeat;
@@ -1109,8 +1164,6 @@ input[type="radio"].visually-hidden {
 
   display: none;
   width: 620px;
-  /*margin-left: 80px;*/
-  /*padding-bottom: 139px;*/
 
   background-image: url("../img/slider-credit.png");
   background-repeat: no-repeat;
@@ -1132,7 +1185,6 @@ input[type="radio"].visually-hidden {
   
   width: 195px;
   margin-top: 26px;
- 
   padding-top: 10px;
   padding-bottom: 10px;
 }
@@ -1156,12 +1208,12 @@ input[type="radio"].visually-hidden {
   padding: 0;
 }
 
-.company-contacts-description {
+.company-contacts-description-1 {
   width: 513px;
   margin: 0;
+  margin-bottom: 25px;
   padding: 0;
   padding-top: 26px;
-  margin-bottom: 25px;
 
   font-family: "PT Sans", Arial, sans-serif;
   font-size: 13px;
@@ -1180,10 +1232,10 @@ input[type="radio"].visually-hidden {
 }
 
 .delivery-companies {
-  padding-left: 36px;
   margin: 0;
   margin-top: 11px;
   margin-bottom: 27px;
+  padding-left: 36px;
   
   font-size: 18px;
   line-height: 19px;
@@ -1235,10 +1287,10 @@ input[type="radio"].visually-hidden {
 .company-contacts-description-3 {
   width: 182px;
   margin: 0;
+  margin-bottom: 31px;
   padding: 0;
   padding-top: 26px;
-  margin-bottom: 31px;
-
+  
   font-family: "PT Sans", Arial, sans-serif;
   font-size: 13px;
   line-height: 24px;
@@ -1250,9 +1302,9 @@ input[type="radio"].visually-hidden {
   justify-content: center;
   align-items: center;
   width: 300px;
+  margin-top: 31px;
   padding-top: 10px;
   padding-bottom: 10px;
-  margin-top: 31px;
 }
 
 .footer-wrapper {
@@ -1285,11 +1337,11 @@ input[type="radio"].visually-hidden {
   content: "";
   
   position: absolute;
+  left: 0;
+  bottom: -5px;
 
   width: 100%;
   height: 5px;
-  left: 0;
-  bottom: -5px;
 
   background-color: #B52932;
 }
@@ -1305,9 +1357,9 @@ input[type="radio"].visually-hidden {
 .address-footer {
   width: 324px;
   margin: 0;
-  margin-left: 2px;
   margin-top: 33px;
   margin-bottom: 49px;
+  margin-left: 2px;  
 }
 
 .footer-contact-right {
@@ -1326,8 +1378,8 @@ input[type="radio"].visually-hidden {
 
 .footer-contact-top .footer-site-navigation {
   margin: 0;
-  padding-left: 67px;
   margin-bottom: 34px;
+  padding-left: 67px;
 }
 
 .footer-contact-bottom .footer-site-navigation {
@@ -1369,7 +1421,10 @@ input[type="radio"].visually-hidden {
 }
 
 .footer-bottom {
-  padding: 36px 0px 28px 0px;
+  padding-top: 36px;
+  padding-right: 0px;
+  padding-bottom: 28px;
+  padding-left: 0px;
 
   background-color: #293449;
 }
@@ -1381,8 +1436,8 @@ input[type="radio"].visually-hidden {
 }
 
 .copyright {
-  margin: 0;
   width: 235px;
+  margin: 0;
 }
 
 .footer-social ul {
@@ -1478,10 +1533,10 @@ input[type="radio"].visually-hidden {
 .my-account {
   position: relative;
 
-  padding-left: 47px;
+  width: 299px;
   padding-top: 12px;
   padding-bottom: 10px;
-  width: 299px;
+  padding-left: 47px;
   
   font-size: 21px;
   line-height: 21px;
@@ -1517,8 +1572,8 @@ input[type="radio"].visually-hidden {
 
 .logout {
   position: absolute;
-  right: 11px;
   top: 13px;
+  right: 11px;
 
   width: 20px;
   height: 17px;
@@ -1547,8 +1602,8 @@ input[type="radio"].visually-hidden {
   content: "";
   
   position: absolute;
-  left: 11px;
   top: 8px;
+  left: 11px;
 
   width: 4px;
   height: 4px;
@@ -1579,13 +1634,11 @@ input[type="radio"].visually-hidden {
   position: relative;
 
   display: flex;
-  
-  padding: 0;
+  width: 380px;
   margin: 0;
+  padding: 0;
   padding-top: 20px;
   padding-bottom: 20px;
-
-  width: 380px;
 
   font-family: "PT Sans", Arial, sans-serif;
   font-size: 13px;
@@ -1600,8 +1653,8 @@ input[type="radio"].visually-hidden {
 
 .main-page {
   position: absolute;
-  left: -2px;
   top: 22px;
+  left: -2px;
 
   width: 14px;
   height: 12px;
@@ -1621,8 +1674,8 @@ input[type="radio"].visually-hidden {
   content: "";
   
   position: absolute;
-  left: -27px;
   top: 0px;
+  left: -27px;
 
   width: 8px;
   height: 12px;
@@ -1636,8 +1689,8 @@ input[type="radio"].visually-hidden {
   content: "";
   
   position: absolute;
-  right: -25px;
   top: 0px;
+  right: -25px;
 
   width: 8px;
   height: 12px;
@@ -1657,8 +1710,8 @@ input[type="radio"].visually-hidden {
   content: "";
   
   position: absolute;
-  right: -25px;
   top: 0px;
+  right: -25px;
 
   width: 8px;
   height: 12px;
@@ -1680,8 +1733,8 @@ input[type="radio"].visually-hidden {
 
 .perforators-background .title-second {
   margin: 0;
-  padding-bottom: 29.5px;
   padding-top: 29.5px;
+  padding-bottom: 29.5px;
   padding-left: 28px;
 }
 
@@ -1735,7 +1788,6 @@ input[type="radio"].visually-hidden {
 
 .sorting-links .active {
   color: #EE3643;
-
   text-decoration: none;
 }
 
@@ -1793,10 +1845,10 @@ input[type="radio"].visually-hidden {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  padding: 0;
   margin: 0;
   margin-top: 21px;
   margin-bottom: 21px;
+  padding: 0;
 }
 
 .catalog-products-list .product {
@@ -1820,10 +1872,10 @@ input[type="radio"].visually-hidden {
 
 .sidebar-title {
   width: 201px;
+  margin: 0;
   padding-top: 12px;
   padding-bottom: 8px;
   padding-left: 19px;
-  margin: 0;
 
   border-radius: 5px;
 }
@@ -1872,7 +1924,6 @@ input[type="radio"].visually-hidden {
 .value-left {
   position: absolute;
   z-index: 2;
-
   top: 30px;
   left: 20px;
 }
@@ -1880,7 +1931,6 @@ input[type="radio"].visually-hidden {
 .value-right {
   position: absolute;
   z-index: 2;
-
   top: 30px;
   right: 40px;
 }
@@ -1928,7 +1978,10 @@ input[type="radio"].visually-hidden {
 }
 
 .numbers span {
-  padding: 6px 10px;
+  padding-top: 6px;
+  padding-right: 10px;
+  padding-bottom: 6px;
+  padding-left: 10px;
 }
 
 .numbers input::-webkit-input-placeholder {
@@ -1965,16 +2018,16 @@ input[type="radio"].visually-hidden {
 
 .filter-producers ul,
 .filter-power ul {
-  padding: 0;
   margin: 0;
+  padding: 0;
 
   list-style: none;
 }
 
 .filter-producers,
 .filter-power {
-  padding: 0;
   margin: 0;
+  padding: 0;
 
   border: none;
 }
@@ -1990,8 +2043,8 @@ input[type="radio"].visually-hidden {
 
 .filter-producers .filter-title {
   margin: 0;
-  padding-top: 17px;
   margin-bottom: 15px;
+  padding-top: 17px;
 }
 
 .filter-producers-option,
@@ -2014,8 +2067,8 @@ input[type="radio"].visually-hidden {
   content: "";
 
   position: absolute;
-  left: -35px;
   top: -3px;
+  left: -35px;
 
   width: 20px;
   height: 20px;
@@ -2036,8 +2089,9 @@ input[type="radio"].visually-hidden {
 
   border-right: 5px solid #C5C5C5;
   border-bottom: 5px solid #C5C5C5;
-  transform: rotate(45deg);
   box-shadow: 2px 0 0 0 #FFFFFF, inset -2px 0 0 0 #FFFFFF;
+
+  transform: rotate(45deg);
 }
 
 .filter-input-checkbox:hover + label:hover::before {
@@ -2076,8 +2130,8 @@ input[type="radio"].visually-hidden {
   content: "";
 
   position: absolute;
-  left: -37px;
   top: -7px;
+  left: -37px;
 
   width: 18px;
   height: 18px;
@@ -2126,7 +2180,7 @@ input[type="radio"].visually-hidden {
   color: #000000;
   text-transform: uppercase;
 
-  background: #FFFFFF;
+  background-color: #FFFFFF;
   border: 1px solid #E5E5E5;
 }
 
@@ -2184,23 +2238,22 @@ input[type="radio"].visually-hidden {
 }
 
 .catalog-about-us {
-  background-color: #F3F7F8;
   padding-bottom: 69px;
+
+  background-color: #F3F7F8;
 }
 
 .catalog-about-us .title-second {
   margin: 0;
-  padding-top: 64px;
   margin-bottom: 25px;
+  padding-top: 64px;
 }
 
 .company-contacts-description {
+  width: 930px;
   margin: 0;
   padding: 0;
-  width: 930px;
 }
-
-/*modal*/
 
 .modal {
   position: fixed;
@@ -2217,9 +2270,9 @@ input[type="radio"].visually-hidden {
   display: block;
   width: 620px;
   margin: 0;
-  padding: 0;
   margin-left: -320px;
-  
+  padding: 0;
+
   font-size: 18px;
   line-height: 18px;
 
@@ -2229,9 +2282,9 @@ input[type="radio"].visually-hidden {
 
 .message {
   padding-top: 52px;
+  padding-right: 80px;
   padding-bottom: 29px;
   padding-left: 80px;
-  padding-right: 80px;
 }
 
 .write-us-top {
@@ -2250,14 +2303,14 @@ input[type="radio"].visually-hidden {
   width: 186px;
   height: 32px;
   margin-top: 8px;
-  text-align: left;
-  padding-left: 15px;
   padding-right: 15px;
+  padding-left: 15px;
 
   font-family: "PT Sans", Arial, sans-serif;
   font-size: 13px;
   line-height: 18px;
   color: #000000;
+  text-align: left;
   
   border: 2px solid #DEE3E4;
   border-radius: 3px;
@@ -2293,8 +2346,8 @@ input[type="radio"].visually-hidden {
 .write-us-bottom textarea {
   width: 426px;
   height: 80px;
-  padding: 15px;
   margin-top: 8px;
+  padding: 15px;
 
   font-family: "PT Sans", Arial, sans-serif;
   font-size: 13px;
@@ -2306,10 +2359,10 @@ input[type="radio"].visually-hidden {
 }
 
 .send-btn {
-  padding-left: 81px;
   padding-top: 37px;
   padding-right: 81px;
   padding-bottom: 37px;
+  padding-left: 81px;
 
   background-color: #F4F4F4;
 }
@@ -2382,12 +2435,12 @@ input[type="radio"].visually-hidden {
   display: block;
   width: 620px;
   margin: 0;
-  padding: 0;
   margin-left: -320px;
-  
+  padding: 0;
+
+  background-color: #FFFFFF;
   border-top: 7px solid #FF5357;
   box-shadow: 0 20px 40px 0 rgba(0,0,0,0.75);
-  background-color: #FFFFFF;
 }
 
 .modal-cart-description {
@@ -2396,8 +2449,8 @@ input[type="radio"].visually-hidden {
   margin: 0;
   padding: 0;
   padding-top: 70px;
-  padding-left: 178px;
   padding-bottom: 70px;
+  padding-left: 178px;
 
   font-family: "Cuprum", Arial, sans-serif;
   font-size: 30px;
